# bazel-workshop

./: .bazelrc  .gitignore  README.md  WORKSPACE  angular.json  package.json  postinstall.tsconfig.json  tsconfig.json
src/: BUILD.bazel  app-routing.module.ts  app-test.component.ts  app.component.html  app.component.spec.ts  app.module.dev.ts  app.module.ts  index.html  main.dev.ts  main.prod.ts  main.ts
src/+state/: app.reducers.ts
src/app/: BUILD.bazel  app-routing.module.ts  app-test.component.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.dev.ts  app.module.ts
src/app/shared/+state/: app.reducers.ts
src/app/shared/material/: BUILD.bazel  material.module.ts
src/assets/images/: BUILD.bazel
src/browser/: BUILD.bazel  polyfills.ts
src/configs/: BUILD.bazel  tsconfig.app.json
src/feature/: BUILD.bazel  feature.module.ts
src/feature/+state/: BUILD.bazel
src/features/feature/: BUILD.bazel
src/features/feature/+state/: feature.reducers.ts
src/features/super/: BUILD.bazel  super.component.html  super.component.spec.ts  super.component.ts  super.module.ts
src/features/super/+state/: super.reducers.ts
src/material/: material.module.ts
src/styles/: main.scss  shared.scss
src/test/: BUILD.bazel  karma.conf.js
