package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
ng_module(
    name = "polyfills",
    srcs = [
        "polyfills.ts"
    ],
    tsconfig = "//src/configs:tsconfig.app.json",
    deps = [
        "//src/app",
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser/animations",
        "@angular//packages/router",
        "@npm//@ngrx/store"
    ],
)

exports_files([
    "browserslist",
    "favicon.ico"
])
