package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
ng_module(
    name = "test",
    srcs = [
        "test.ts"
    ],
    tsconfig = "//src/configs:tsconfig.app.json",
    deps = [
        "//src/app",
        "@angular//packages/core/testing",
        "@angular/platform-browser-dynamic/testing",
        "@npm//node_modules/zone.js/dist/zone-testing.min.js",
    ],
)

exports_files([
    "karma.conf.js"
])
