load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "feature-styles",
    src = "feature.component.scss",
)

ng_module(
    name = "feature",
    srcs = [
        "feature.component.ts",
        "feature.module.ts",
    ],
    assets = [
        ":feature.component.html",
        ":feature-styles",
    ],
    tsconfig = "//src:tsconfig-app",
    deps = [
        "//src/features/feature/+state:reducers",
        "//src/app/shared/material",
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser/animations",
        "@angular//packages/router",
        "@npm//@ngrx/store",
    ],
)
